gap form FIX

--- a/client/src/components/FormStart/FormStart.module.css
+++ b/client/src/components/FormStart/FormStart.module.css
@@ -1,5 +1,6 @@
 .wrapper{
     margin-top: -15%;
+    margin-bottom: -15%;
 }
 .wrapper form{
     background-color: rgb(200, 225, 212);
